added screen shots strategy

--- a/code-which-just-works/src/test/resources/config.properties
+++ b/code-which-just-works/src/test/resources/config.properties
@@ -1,1 +1,4 @@
-appURL=https://amazon.in
+app_url=https://amazon.in
+
+# two options: after_each_step, on_failure, no_screen_shot
+screen_shot_strategy=after_each_step
