--- a/code-which-just-works/pom.xml
+++ b/code-which-just-works/pom.xml
@@ -71,7 +71,11 @@
             <artifactId>log4j-core</artifactId>
             <version>2.23.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>tech.grasshopper</groupId>
+            <artifactId>extentreports-cucumber7-adapter</artifactId>
+            <version>1.14.0</version>
+        </dependency>
     </dependencies>
 
 </project>
