selenium Grid and remote web driver impl

--- a/code-which-just-works/src/test/resources/config.properties
+++ b/code-which-just-works/src/test/resources/config.properties
@@ -2,3 +2,7 @@ app_url=https://amazon.in
 
 # two options: after_each_step, on_failure, no_screen_shot
 screen_shot_strategy=after_each_step
+
+grid_url=http://localhost:4444/wd/hub
+browser_name=chrome_grid
+pause_after_each_step_in_seconds=5
