--- a/reusable-component-demo/pom.xml
+++ b/reusable-component-demo/pom.xml
@@ -12,9 +12,19 @@
     <artifactId>reusable-component-demo</artifactId>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+<!--    <dependencies>-->
+<!--        <dependency>-->
+<!--            <groupId>org.tdoc</groupId>-->
+<!--            <artifactId>test-auto-reusable-component</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--            <scope>optional</scope>-->
+<!--        </dependency>-->
+<!--        -->
+<!--    </dependencies>-->
 
 </project>
