--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ on:
 jobs:
   integration-test:
     runs-on: ubuntu-latest
+    container: maven:3.8.1-openjdk-17
     services:
       selenium:
         image: selenium/standalone-chrome:latest
@@ -27,12 +28,12 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
+#    - name: Set up JDK 17
+#      uses: actions/setup-java@v3
+#      with:
+#        java-version: '17'
+#        distribution: 'temurin'
+#        cache: maven
     - name: Run UI Tests
       run: mvn -B package --file pom.xml -Dbrowser_name=chrome_grid -Dgrid_url="http://selenium:4444/wd/hub"
 
