--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
 # documentation.
+# Use these links: https://www.testmo.com/guides/github-actions-selenium
 
 name: UI Tests with Selenium
 
@@ -36,4 +37,10 @@ jobs:
 #        cache: maven
     - name: Run UI Tests
       run: mvn -B package --file pom.xml -Dbrowser_name=chrome_grid -Dgrid_url="http://selenium:4444/wd/hub"
+    - name: Upload Reports
+      uses: actions/upload-artifact@v3
+      if: always()
+      with:
+        name: target
+        path: target/
 
