Read me document, ci file upload artefacts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,6 @@ jobs:
       with:
         name: cucumber-reports
         path: |
-                target\cucumber-reports\cucumber-pretty.html
-                target\reports**
+                code-which-just-works\target\cucumber-reports\cucumber-pretty.html
+                code-which-just-works\target\reports-extent
 
