--- a/code-which-just-works/src/test/resources/extent.properties
+++ b/code-which-just-works/src/test/resources/extent.properties
@@ -41,8 +41,8 @@ systeminfo.version=8.1
 
 #this is optional and creates the report in base folder name with date time format
 #'reports 29-Feb-20 14-14-14'
-basefolder.name=target/reports
-basefolder.datetimepattern=d-MMM-YY HH-mm-ss
+basefolder.name=target/reports-extent
+#basefolder.datetimepattern=d-MMM-YY HH-mm-ss
 #default is true
 #basefolder.enable.delimiter=true
 #default is space
