elk latest index

--- a/code-which-just-works/src/test/resources/config.properties
+++ b/code-which-just-works/src/test/resources/config.properties
@@ -1,5 +1,8 @@
 env=sit
-releaseCycle=0.0.4
+release=0.0.4
+appName=crm
+
+
 app_url=https://amazon.in
 
 # two options: after_each_step, on_failure, no_screen_shot
